fix for study page for #4, ie10 requires overflow hidden on div element for it to be the size of its contents

--- a/bii_webapp/apps/browse/static/browse/css/report.css
+++ b/bii_webapp/apps/browse/static/browse/css/report.css
@@ -11,18 +11,13 @@
 HEADER
 **/
 #rep_header {
-    width: 100%;
     height: 100px;
     background-color: #24aae1;
-}
-
-#rep_header #rep_header_align {
     padding: 0px 20px;
     line-height: 100px;
-    height: 50px;
 }
 
-#rep_header_align h1 {
+#rep_header h1 {
     font-size: 50px;
     margin: 0px;
     line-height: 100px;
@@ -30,7 +25,7 @@ HEADER
     float: left;
 }
 
-#rep_header_align div {
+#rep_header div {
     float: right;
 }
 
@@ -57,6 +52,8 @@ INVESTIGATION HEADERS
 .rep_header {
     background-color: #6e6e70;
     height: 60px;
+    padding: 0px 20px;
+    line-height: 60px;
 }
 
 .rep_header > div:first-child {
@@ -65,7 +62,7 @@ INVESTIGATION HEADERS
     line-height: 60px;
 }
 
-.rep_header_align h2 {
+.rep_header h2 {
     line-height: 60px;
     color: #ffffff;
     float: left;
@@ -73,7 +70,7 @@ INVESTIGATION HEADERS
     font-size: 30px;
 }
 
-.rep_header_align div {
+.rep_header div {
     float: right;
 }
 
